properly deleting cookie on /auth/profile/logout

--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -35,7 +35,9 @@
     margin-left: 147px;
     overflow-y: scroll;
   }
+</style>
 
+<style id="side-bar-styles">
   .side-bar-item {
     text-align: center;
     padding-left: 20px;
@@ -56,21 +58,39 @@
     border-top: 2px solid darkseagreen;
   }
 </style>
+
 <script src="/static/js/top-bar.js"></script>
 <script src="/static/js/side-bar.js"></script>
 <top-bar></top-bar>
-<side-bar>
+
+<side-bar id="side-bar">
   <div slot="profile" hx-trigger="click" hx-get="/auth/transition/profile" hx-target="#transition-styles"
-    hx-swap="outerHTML" hx-push-url="true" class="side-bar-item">Profile
+    hx-swap="outerHTML" hx-push-url="/auth/profile" class="side-bar-item">
+    Profile
   </div>
   <div slot="games" hx-trigger="click" hx-get="/auth/transition/games" hx-target="#transition-styles"
-    hx-swap="outerHTML" hx-push-url="true" class="side-bar-item">Games
+    hx-swap="outerHTML" hx-push-url="/auth/games" class="side-bar-item">
+    Games
   </div>
   <div slot="friends" hx-trigger="click" hx-get="/auth/transition/friends" hx-target="#transition-styles"
-    hx-swap="outerHTML" hx-push-url="true" class="side-bar-item">
+    hx-swap="outerHTML" hx-push-url="/auth/friends" class="side-bar-item">
     Friends
   </div>
 </side-bar>
+
+
+<!-- <side-bar> -->
+<!--   <div slot="profile" hx-trigger="click" hx-get="/auth/transition/profile" hx-target="#transition-styles" -->
+<!--     hx-swap="outerHTML" hx-push-url="/auth/profile" class="side-bar-item">Profile -->
+<!--   </div> -->
+<!--   <div slot="games" hx-trigger="click" hx-get="/auth/transition/games" hx-target="#transition-styles" -->
+<!--     hx-swap="outerHTML" hx-push-url="/auth/games" class="side-bar-item">Games -->
+<!--   </div> -->
+<!--   <div slot="friends" hx-trigger="click" hx-get="/auth/transition/friends" hx-target="#transition-styles" -->
+<!--     hx-swap="outerHTML" hx-push-url="/auth/friends" class="side-bar-item"> -->
+<!--     Friends -->
+<!--   </div> -->
+<!-- </side-bar> -->
 <main>
   <div id="page-container">
     {{ if eq .PartialTemplate "sign-in" }}
