--- a/ui/templates/create-account.html
+++ b/ui/templates/create-account.html
@@ -88,7 +88,7 @@
 
     <div class="form-item">
       <button-component>
-        <button slot="button" type="submit" value="Sign In">
+        <button slot="button" type="submit">
           Let's go!
         </Button>
       </button-component>
