--- a/ui/templates/games.html
+++ b/ui/templates/games.html
@@ -129,7 +129,7 @@
         <td>What is the best day of the week?</td>
       </tr>
       <tr>
-        <td>Family</td>
+        <td>{{ .Data.GameName}}</td>
         <td>7</td>
         <td>What is your favorite flavor of ice cream?</td>
       </tr>
