--- a/ui/templates/profile.html
+++ b/ui/templates/profile.html
@@ -70,6 +70,29 @@
       justify-content: space-between;
     }
 
+    #photo-container {
+      overflow: hidden;
+      object-fit: contain;
+      position: relative;
+      width: 100px;
+      height: 100px;
+    }
+
+    #profile-photo-image {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+    }
+
+    #crop-filter {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background-color: seagreen;
+      mask: radial-gradient(transparent 0%, transparent 69%, seagreen 70%);
+      z-index: 5;
+    }
 
 
     #profile-image {
@@ -89,7 +112,7 @@
   </style>
 
   <h1 id="username-container">
-    {{ .Data.Username }}
+    {{ .Username }}
   </h1>
   <div id="profile-subcontainer">
     <div id="user-info">
@@ -136,9 +159,15 @@
 
     </div>
 
-    <div id="profile-photo-container">
-      <img id="profile-photo-image" src="https://ask-away.s3.us-west-1.amazonaws.com/{{ .Data.Username}}">
+    <div id="photo-container">
+      <img id="profile-photo-image" src="https://ask-away.s3.us-west-1.amazonaws.com/{{ .Username}}">
+      <div id="crop-filter" hx-get="/auth/profile/ui/profile-photo" hx-target="#page-content"></div>
+
     </div>
+
+    <!-- <div id="photo-container" hx-get="/auth/profile/ui/profile-photo" hx-target="#page-content"> -->
+    <!--   <img id="profile-photo-image" src="https://ask-away.s3.us-west-1.amazonaws.com/{{ .Username}}"> -->
+    <!-- </div> -->
 
   </div>
   {{ end }}
