--- a/ui/templates/friends.html
+++ b/ui/templates/friends.html
@@ -72,13 +72,52 @@
       font-size: 20px;
     }
 
+
     thead,
     tfoot {
       background-color: rgb(228 240 245);
     }
 
-    tbody>tr:nth-of-type(even) {
-      background-color: rgb(237 238 242);
+    tr {
+      border: 2px solid blue;
+    }
+
+
+
+    .photo-container {
+      overflow: hidden;
+      object-fit: contain;
+      position: relative;
+      width: 30px;
+      height: 30px;
+    }
+
+    .profile-photo-image {
+      left: 0;
+      position: absolute;
+      width: 30px;
+      height: 30px;
+      object-fit: cover;
+    }
+
+    .crop-filter {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      background-color: skyblue;
+      mask: radial-gradient(transparent 0%, transparent 69%, skyblue 70%);
+      z-index: 5;
+    }
+
+    th {
+      height: 40px;
+    }
+
+    .user-container {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
     }
   </style>
   <h1>
@@ -97,12 +136,12 @@
     </div>
 
     <table class="table">
-      <thead>
-        <tr>
-          <th>Username</th>
-          <th>Email</th>
-        </tr>
-      </thead>
+      <!-- <thead> -->
+      <!--   <tr> -->
+      <!--     <th>Username</th> -->
+      <!--     <th>Email</th> -->
+      <!--   </tr> -->
+      <!-- </thead> -->
       <tbody id="search-results">
       </tbody>
     </table>
