--- a/ui/templates/upload-profile-photo.html
+++ b/ui/templates/upload-profile-photo.html
@@ -10,6 +10,14 @@
       font-family: Cheto;
     }
 
+    #container {
+      display: inline-block;
+      background-color: salmon;
+      border: 3px solid black;
+      border-radius: 10px;
+      box-shadow: 5px 5px black;
+    }
+
     form {
       padding: 20px;
       gap: 15px;
@@ -27,10 +35,27 @@
     }
 
     #photo-container {
-      background-color: snow;
-      padding: 10px;
-      border: 2px solid black;
-      border-radius: 5px;
+      overflow: hidden;
+      object-fit: contain;
+      position: relative;
+      width: 200px;
+      height: 200px;
+    }
+
+    #profile-photo-image {
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      object-fit: cover;
+    }
+
+    #crop-filter {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background-color: salmon;
+      mask: radial-gradient(transparent 0%, transparent 69%, seagreen 70%);
+      z-index: 5;
     }
 
     #profile-photo-label {
@@ -52,24 +77,36 @@
       display: block;
       padding: 25px;
     }
-  </style>
-  <form enctype="multipart/form-data" hx-post="/auth/profile/profile-photo" hx-target="#page-content"
-    hx-swap="innerHTML">
-    <div id="profile-photo-item">
-      <div id="profile-photo-label">
-        <label>
-          Upload Profile Photo
-        </label>
-        <input type="file" name="profileImage" accept="image/jpeg" required />
-      </div>
-      <div id="photo-container">
-        <img src="/static/public/blank_avatar.svg">
-      </div>
-      <button-component>
-        <button slot="button" type="submit"></button>
-      </button-component>
-    </div>
-</div>
-</form>
 
-{{ end }}
+    button[type=submit] {
+      width: 300px;
+      background-color: skyblue;
+      border-radius: 5px;
+      padding: 5px;
+    }
+  </style>
+  <div id="container">
+    <form enctype="multipart/form-data" hx-post="/auth/profile/profile-photo" hx-target="#page-content"
+      hx-swap="innerHTML">
+      <div id="profile-photo-item">
+        <div id="profile-photo-label">
+          <label>
+            Upload Profile Photo
+          </label>
+          <input type="file" name="profileImage" accept="image/jpeg" required />
+          <button type="submit">
+            Submit
+          </button>
+        </div>
+
+
+        <div id="photo-container">
+          <img id="profile-photo-image" src="https://ask-away.s3.us-west-1.amazonaws.com/{{ .Username}}">
+          <div id="crop-filter" hx-get="/auth/profile/ui/profile-photo" hx-target="#page-content"></div>
+
+        </div>
+      </div>
+    </form>
+  </div>
+
+  {{ end }}
