--- a/ui/templates/games.html
+++ b/ui/templates/games.html
@@ -109,7 +109,7 @@
       Games
     </h1>
 
-    <button hx-get="/auth/games/ui/create-game" hx-target="#page-content">
+    <button hx-get="/auth/games/ui/create-game" hx-target="#page-content" hx-push-url="true">
       + Create New Game
     </button>
 
